# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Updated redis-brute.nse and redis-info.nse to work against
  the latest versions of redis server. [Henri Doreau]

o [Ncat] Fixed errors in conneting to IPv6 proxies. [Joachim Henke]

o Added a service probe for Minecraft servers. [Eric Davisson]

o [NSE] Updated hostmap-bfk to work with the latest version of their website. 
  [Paulino Calderon]

o [NSE] Added XML structured output support to hostmap-bfk, hostmap-robtex,
  and hostmap-ip2hosts. [Paulino Calderon]

o [NSE] Added hostmap-ip2hosts. It uses the service provider ip2hosts.com
  to list domain names pointing to the same IP address. [Paulino Calderon]

o [NSE] Added http-vuln-cve2013-0156. It detects Ruby on Rails servers
  vulnerable to remote command execution (CVE-2013-0156). [Paulino Calderon]

o Added a service probe for the Hazelcast data grid. [Pavel Kankovsky]

o [NSE] Rewrote telnet-brute for better compatibility with a variety
  of telnet servers. [nnposter]

o [Nsock] Added initial proxy support to nsock. Nsock based modules (version
  scan, nse) of nmap can now establish TCP connections through chains of
  proxies. HTTP CONNECT and SOCKS4 protocols are supported, with some
  limitations. [Henri Doreau]

o Fixed a regression that changed the number of delimiters in machine
  output. [Daniel Miller]

o [Zenmap] Updated the Italian translation. [Giacomo]

o Handle ICMP type 11 (Time Exceeded) responses to port scan probes.
  Ports will be reported as "filtered", to be consistent with existing
  Connect scan results, and will have a reason of time-exceeded.
  DiabloHorn reported this issue via IRC. [Daniel Miller]

o Add new decoders (BROWSER, DHCP6 and LLMNR) to broadcast-listener and changed
  output of some of the decoders slightly. [Patrik Karlsson]

o Timeout script-args are now standardized to use the timespec that
  Nmap's command-line arguments take (5s, 5000ms, 1h, etc.). Some
  scripts that previously took an integer number of milliseconds will